--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.2.3",
-    "@strapi/plugin-users-permissions": "4.2.3",
     "@strapi/plugin-i18n": "4.2.3",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.2.3",
+    "@strapi/provider-upload-aws-s3": "^4.2.3",
+    "@strapi/strapi": "4.2.3",
+    "better-sqlite3": "7.4.6",
+    "pg": "^8.7.3"
   },
   "author": {
     "name": "A Strapi developer"
